# TrajFlow_VSR

./: .gitignore  CCFA_VSR_NEW_MODEL_PROPOSAL.md  PROJECT_STRUCTURE.md  README.md  main.py  pyproject.toml
assets/: .gitkeep  trajflow_vsr_architecture.drawio
checkpoints/: .gitkeep
configs/: README.md
configs/ablation/: .gitkeep  stage_b_context_length_grid.yaml  stage_b_context_scan_matrix.yaml  stage_b_controlled_motion_scan.yaml  stage_b_core_module_grid.yaml  stage_b_scan_policy_grid.yaml  stage_b_transport_curriculum_grid.yaml  stage_b_transport_two_phase_grid.yaml  stage_c_flow_step_grid.yaml  stage_d_distillation_grid.yaml  stage_e_protocol_grid.yaml
configs/baselines/: core_vsr_baselines.yaml
configs/benchmark/: ccfa_core_benchmark.yaml
configs/data/: .gitkeep  degradation_mild_real.yaml  frame_manifest.yaml  realvsr.yaml  reds.yaml  spmcs.yaml  udm10.yaml  vid4.yaml  videolq.yaml  vimeo90k.yaml
configs/eval/: .gitkeep  frame_manifest.yaml  no_reference.yaml  offline.yaml  paper_official.yaml  streaming.yaml  visualization.yaml
configs/infer/: videolq.yaml  (+1 more)
data/: README.md
docs/: README.md
experiments/: README.md
logs/: .gitkeep
outputs/: .gitkeep
scripts/: README.md  audit_readiness.py  degrade_data.py  diagnose_transport.py  estimate_degradation.py  evaluate.py  export_baseline_metrics.py  export_baseline_records.py  export_benchmark_plan.py  export_data_inventory.py  export_paper_table.py  infer_video.py  prepare_data.py  run_ablation.py  run_benchmark.py  train.py  visualize_trajectory.py  visualize_uncertainty.py
tests/: README.md
(+179 files in other folders)
